python/uwapi/uw/bots.h

 typedef uint8_t uint8;
 typedef uint32_t uint32;
 typedef int32_t sint32;
 typedef uint64_t uint64;
 typedef struct UwIds
 {
  const uint32 * ids;
  uint32 count;
 } UwIds;
 typedef struct UwMapInfo
 {
  const char * name;
  const char * guid;
  const char * path;
  uint32 maxPlayers;
 } UwMapInfo;
               bool uwMapInfo(UwMapInfo *data);
               uint32 uwTilesCount(void);
 typedef struct UwTile
 {
  float position[3];
  float up[3];
  const uint32 * neighborsIndices;
  uint32 neighborsCount;
  uint32 clusterIndex;
  uint8 terrain;
  bool border;
 } UwTile;
               void uwTile(uint32 index, UwTile *data);
 typedef enum UwOverviewFlags
 {
  UwOverviewFlags_None = 0,
  UwOverviewFlags_Resource = 1 << 0,
  UwOverviewFlags_Construction = 1 << 1,
  UwOverviewFlags_MobileUnit = 1 << 2,
  UwOverviewFlags_StaticUnit = 1 << 3,
  UwOverviewFlags_Unit = UwOverviewFlags_MobileUnit | UwOverviewFlags_StaticUnit,
 } UwOverviewFlags;
               UwOverviewFlags uwOverviewFlags(uint32 position);
               void uwOverviewIds(uint32 position, UwIds *data);
 typedef struct UwOverviewExtract
 {
  const UwOverviewFlags * flags;
  uint32 count;
 } UwOverviewExtract;
               void uwOverviewExtract(UwOverviewExtract *data);
               void uwAreaRange(float x, float y, float z, float radius, UwIds *data);
               void uwAreaConnected(uint32 position, float radius, UwIds *data);
               void uwAreaNeighborhood(uint32 position, float radius, UwIds *data);
               void uwAreaExtended(uint32 position, float radius, UwIds *data);
               bool uwTestVisible(float x1, float y1, float z1, float x2, float y2, float z2);
               bool uwTestShooting(uint32 shooterPosition, uint32 shooterProto, float shootingRangeUpgrade, uint32 targetPosition, uint32 targetProto);
               float uwDistanceLine(float x1, float y1, float z1, float x2, float y2, float z2);
               float uwDistanceEstimate(uint32 a, uint32 b);
               float uwYaw(uint32 position, uint32 towards);
 typedef enum UwPrototypeTypeEnum
 {
  UwPrototypeTypeEnum_None = 0,
  UwPrototypeTypeEnum_Resource = 1,
  UwPrototypeTypeEnum_Recipe = 2,
  UwPrototypeTypeEnum_Construction = 3,
  UwPrototypeTypeEnum_Unit = 4,
  UwPrototypeTypeEnum_Upgrade = 5,
  UwPrototypeTypeEnum_Race = 6,
 } UwPrototypeTypeEnum;
               void uwAllPrototypes(UwIds *data);
               UwPrototypeTypeEnum uwPrototypeType(uint32 prototypeId);
               const char *uwPrototypeJson(uint32 prototypeId);
               const char *uwDefinitionsJson(void);
 typedef UwEntity *UwEntityPtr;
               UwEntityPtr uwEntityPointer(uint32 id);
               uint32 uwEntityId(UwEntityPtr entity);
               void uwAllEntities(UwIds *data);
 typedef struct UwProtoComponent
 {
  uint32 proto;
 } UwProtoComponent;
               bool uwFetchProtoComponent(UwEntityPtr entity, UwProtoComponent *data);
 typedef struct UwOwnerComponent
 {
  uint32 force;
 } UwOwnerComponent;
               bool uwFetchOwnerComponent(UwEntityPtr entity, UwOwnerComponent *data);
 typedef struct UwControllerComponent
 {
  uint32 player;
  uint32 timestamp;
 } UwControllerComponent;
               bool uwFetchControllerComponent(UwEntityPtr entity, UwControllerComponent *data);
 typedef struct UwPositionComponent
 {
  uint32 position;
  float yaw;
 } UwPositionComponent;
               bool uwFetchPositionComponent(UwEntityPtr entity, UwPositionComponent *data);
 typedef enum UwUnitStateFlags
 {
  UwUnitStateFlags_None = 0,
  UwUnitStateFlags_Shooting = 1 << 0,
  UwUnitStateFlags_Processing = 1 << 1,
  UwUnitStateFlags_Rebuilding = 1 << 2,
  UwUnitStateFlags_Stalling = 1 << 3,
 } UwUnitStateFlags;
 typedef struct UwUnitComponent
 {
  UwUnitStateFlags state;
  uint32 killCount;
 } UwUnitComponent;
               bool uwFetchUnitComponent(UwEntityPtr entity, UwUnitComponent *data);
 typedef struct UwLifeComponent
 {
  sint32 life;
 } UwLifeComponent;
               bool uwFetchLifeComponent(UwEntityPtr entity, UwLifeComponent *data);
 typedef struct UwMoveComponent
 {
  uint32 posStart;
  uint32 posEnd;
  uint32 tickStart;
  uint32 tickEnd;
  float yawStart;
  float yawEnd;
 } UwMoveComponent;
               bool uwFetchMoveComponent(UwEntityPtr entity, UwMoveComponent *data);
 typedef struct UwAimComponent
 {
  uint32 target;
 } UwAimComponent;
               bool uwFetchAimComponent(UwEntityPtr entity, UwAimComponent *data);
 typedef struct UwRecipeComponent
 {
  uint32 recipe;
 } UwRecipeComponent;
               bool uwFetchRecipeComponent(UwEntityPtr entity, UwRecipeComponent *data);
 typedef struct UwUpdateTimestampComponent
 {
  uint32 timestamp;
 } UwUpdateTimestampComponent;
               bool uwFetchUpdateTimestampComponent(UwEntityPtr entity, UwUpdateTimestampComponent *data);
 typedef struct UwRecipeStatisticsComponent
 {
  uint32 timestamps[3];
  uint32 completed;
 } UwRecipeStatisticsComponent;
               bool uwFetchRecipeStatisticsComponent(UwEntityPtr entity, UwRecipeStatisticsComponent *data);
 typedef struct UwAmountComponent
 {
  uint32 amount;
 } UwAmountComponent;
               bool uwFetchAmountComponent(UwEntityPtr entity, UwAmountComponent *data);
 typedef struct UwAttachmentComponent
 {
  uint32 target;
 } UwAttachmentComponent;
               bool uwFetchAttachmentComponent(UwEntityPtr entity, UwAttachmentComponent *data);
 typedef enum UwPlayerStateFlags
 {
  UwPlayerStateFlags_None = 0,
  UwPlayerStateFlags_Loaded = 1 << 0,
  UwPlayerStateFlags_Pause = 1 << 1,
  UwPlayerStateFlags_Disconnected = 1 << 2,
  UwPlayerStateFlags_Admin = 1 << 3,
 } UwPlayerStateFlags;
 typedef enum UwPlayerConnectionClassEnum
 {
  UwPlayerConnectionClassEnum_None = 0,
  UwPlayerConnectionClassEnum_Computer = 1,
  UwPlayerConnectionClassEnum_VirtualReality = 2,
  UwPlayerConnectionClassEnum_Robot = 3,
  UwPlayerConnectionClassEnum_UwApi = 4,
 } UwPlayerConnectionClassEnum;
 typedef struct UwPlayerComponent
 {
  char name[28];
  uint32 nameLength;
  uint64 steamUserId;
  uint32 force;
  float progress;
  uint32 ping;
  UwPlayerStateFlags state;
  UwPlayerConnectionClassEnum playerConnectionClass;
 } UwPlayerComponent;
               bool uwFetchPlayerComponent(UwEntityPtr entity, UwPlayerComponent *data);
 typedef enum UwForceStateFlags
 {
  UwForceStateFlags_None = 0,
  UwForceStateFlags_Winner = 1 << 0,
  UwForceStateFlags_Defeated = 1 << 1,
  UwForceStateFlags_Disconnected = 1 << 2,
 } UwForceStateFlags;